--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="open">Open</string>
     <string name="delete">Delete Account</string>
     <string name="close">Close</string>
+    <string name="changep">Edit Profile</string>
+    <string name="symptoms">Check Symptoms</string>
+    <string name="consult">Consultations</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
